# check-circ-eq

./: check_eq.py  pyproject.toml  test.ipynb
aft/: 3ad505ce-d668-11ea-a4be-38f9d36dfbf2-hypertket-best-final-circ.json  final_circ_3b87f1.json  final_circ_adder_8.json  final_circ_barenco_tof_10.json  final_circ_barenco_tof_10_long.json  final_circ_barenco_tof_5.json  tof_3.json
bef/: 3ad505ce-d668-11ea-a4be-38f9d36dfbf2.json  3b87f1.json
